--- a/security.html
+++ b/security.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/softcat/job/oCPDafwY'>Softcat Careers - Security Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/GBM1/743999687702856-cloud-security-engineer-aws-'>GBM Cloud Security Engineer (AWS) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -109,16 +113,16 @@
 <p><span class="badge badge-light">Arlington</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kennasecurity/d2bc48ad-b03e-4e69-8db8-1dd02c9d1c20'>Kenna Security - Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kennasecurity/d2bc48ad-b03e-4e69-8db8-1dd02c9d1c20'>Kenna Security - Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://sygnum.join.com/jobs/266848-senior-security-engineer'>Job @ Sygnum (Z?rich): Senior Security Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sygnum.join.com/jobs/266848-senior-security-engineer'>Job @ Sygnum (Z?rich): Senior Security Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Sygnum has a job opening for Senior Security Engineer in Z?rich (published: 
 23.08.2018). Apply now or check the other available jobs.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/logitech/job/o7Kuafwf'>Logitech Careers - IT Security Operations Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/logitech/job/o7Kuafwf'>Logitech Careers - IT Security Operations Analyst</a></h5> 
 <p><span class="badge badge-light">Chennai</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -140,7 +144,7 @@ tackling?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://bcbsfl.referrals.selectminds.com/jobs/sr-it-security-architect-6274'>Sr IT Security Architect - Florida Blue Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bcbsfl.referrals.selectminds.com/jobs/sr-it-security-architect-6274'>Sr IT Security Architect - Florida Blue Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -153,7 +157,7 @@ tackling?...</p>
 <p>2 days ago ... Combine CyberSecurity domain expertise and contemporary data science skills 
 to enhance cyber adversary detection, network defense, and SOC process?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oJWx9fw5&__jvst=Employee+Referral&__jvsd=s3C3Jfwb&__jvsc=Twitter&bid=nH0QTKwF'>ServiceNow Careers - Senior Security Risk Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oJWx9fw5&__jvst=Employee+Referral&__jvsd=s3C3Jfwb&__jvsc=Twitter&bid=nH0QTKwF'>ServiceNow Careers - Senior Security Risk Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -235,7 +239,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=onOCafwH&__jvst=Tenable+Employee&__jvsd=sWudthwS&__jvsc=Twitter&bid=nX0xSKwB'>Tenable Careers - Security Sales Engineer - Federal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=onOCafwH&__jvst=Tenable+Employee&__jvsd=sWudthwS&__jvsc=Twitter&bid=nX0xSKwB'>Tenable Careers - Security Sales Engineer - Federal</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -275,7 +279,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://twincap.join.com/jobs/260722-cyber-security-engineer'>Job @ TwinCap (Z?rich): Cyber Security Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/260722-cyber-security-engineer'>Job @ TwinCap (Z?rich): Cyber Security Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>14. Juli 2019 ... TwinCap GmbH has a job opening for Cyber Security Engineer in Z?rich (
 published: 15.07.2019). Apply now or check the other available jobs.</p>
@@ -290,7 +294,7 @@ Loading.</p>
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/E7AEE43F1B'>QuintoAndar - Jobs: Software Security Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/E7AEE43F1B'>QuintoAndar - Jobs: Software Security Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Software Security Engineer at QuintoAndar.</p>
 <hr/>
@@ -421,7 +425,7 @@ today!</p>
 <p><span class="badge badge-light">Maryland, United States</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/security-architect-rakuten-mobile-9698'>Security Architect-Rakuten Mobile - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/security-architect-rakuten-mobile-9698'>Security Architect-Rakuten Mobile - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -453,10 +457,6 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <hr/>
 <h5><a href='https://jobs.lever.co/mattermost/29b85d07-c7f1-4ec5-80f3-a2f9ff4ac4ab'>Mattermost - Security Engineer, Infrastructure &amp; Operations (Remote)</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/mattermost/339a5767-ccff-46e1-ae91-a0de20b39d0b'>Mattermost - Security Engineer, Infrastructure &amp; Operations (Remote)</a></h5> 
-<p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
 
